hphp/hack/test/ifc/check/await_all.php.exp
=== IFC analysis results for await_all.php
File "await_all.php", line 19, characters 3-16:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "await_all.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "await_all.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
File "await_all.php", line 23, characters 1-230:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "await_all.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "await_all.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "await_all.php", line 19, characters 3-16:
  Another program point contributing to the illegal flow
File "await_all.php", line 26, characters 5-33:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "await_all.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "await_all.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "await_all.php", line 14, characters 3-17:
  Another program point contributing to the illegal flow
  File "await_all.php", line 25, characters 3-12:
  Another program point contributing to the illegal flow
